# nice

./: .gitignore  BUGS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  branch-tracking-review.md  project.yml
.claude/: settings.json
.github/: CODEOWNERS  (+1 more)
crates/nice/: Cargo.toml
crates/nice-harness/: Cargo.toml  build.rs
crates/nice-harness/src/: capture.rs  clock.rs  frame.rs  lib.rs  mem.rs  selftest.rs  signpost.c  signpost.rs  watchdog.rs  workload.rs
crates/nice-itests/: Cargo.toml
crates/nice-itests/src/: behavior.rs  behavior_exemplars.rs  chrome_band.rs  font_mutators.rs  lib.rs  multiwindow.rs  pane_strip.rs  pixels.rs  session.rs  sidebar_multiselect.rs  theme_setters.rs
crates/nice-itests/tests/: visual_terminal_screenshot.rs
crates/nice-model/: Cargo.toml
crates/nice-model/src/: lib.rs  pane.rs  pane_strip_drop.rs  persisted.rs  project.rs  rename_gate.rs  selection.rs  semantic_version.rs  shortcuts.rs  sidebar.rs  strip_geometry.rs  tab.rs  tab_model.rs
crates/nice-model/src/file_browser/: click_router.rs  cwd_impact.rs  drop_resolver.rs  header.rs  listing.rs  menu.rs  mod.rs  naming.rs  open_with.rs  rename_validator.rs  selection.rs  sort.rs  state.rs  store.rs  text_field.rs
crates/nice-model/src/tab_model/: tests.rs
crates/nice-term-core/: Cargo.toml
crates/nice-term-core/src/: deferred.rs  lib.rs  osc7.rs  pty.rs  quoting.rs  session.rs  spawn.rs  vt.rs
crates/nice-term-core/tests/: deferred_session.rs  exec_args.rs  osc_plumbing.rs  pty_process.rs  quoting.rs  term_session.rs
crates/nice-term-input/: Cargo.toml
crates/nice-term-input/src/: config.rs  ime_state.rs  key.rs  keyboard.rs  lib.rs  mouse.rs  paste.rs
crates/nice-term-view/: Cargo.toml
crates/nice-term-view/src/: boxdraw.rs  color.rs  drop.rs  element.rs  font.rs  input.rs  lib.rs  mouse.rs  overlay.rs  session_handle.rs  theme.rs  view.rs
crates/nice-theme/: Cargo.toml
crates/nice-theme/src/: accent.rs  chrome_geometry.rs  color.rs  derive.rs  glass.rs  lib.rs  palette.rs  status.rs  typography.rs
crates/nice/src/: app.rs  app_shell.rs  app_shell_live.rs  atomic_file.rs  built_in_terminal_themes.rs  chrome_icons.rs  chrome_live.rs  claude_e2e_live.rs  claude_hook_installer.rs  claude_lifecycle_live.rs  claude_theme_sync.rs  close_confirm.rs  close_confirm_live.rs  confirmation_modal.rs  context_menu.rs  control_socket.rs  cwd_heal.rs  file_browser_live.rs  ghostty_theme_parser.rs  handoff_live.rs  inline_rename.rs  input_live.rs  keymap.rs  lifecycle.rs  main.rs  multiwindow.rs  niceties_drop.rs  niceties_held.rs  niceties_overlay.rs  niceties_zoom.rs  orphan_reaper.rs  pane_strip_actions.rs  pane_strip_live.rs  persistence_restore_live.rs  platform.rs  rename_migration.rs  restore.rs  session_lifecycle.rs  session_manager.rs  session_store.rs  (+22 more)
crates/nice/src/file_browser/: banner.rs  cwd_snapshot.rs  focus_route.rs  history.rs  mod.rs  ops.rs  pasteboard.rs  rename.rs  sort_settings_store.rs  view.rs  watcher.rs  workspace_ops.rs
crates/nice/src/release_check/: mod.rs  release_fetch.rs  update_check_store.rs
crates/nice/src/session_manager/: tests.rs
crates/nice/src/session_store/: tests.rs
crates/nice/src/settings/: about_pane.rs  advanced_pane.rs  appearance_pane.rs  claude_pane.rs  controls.rs  file_picker.rs  font_pane.rs  mod.rs  prefs_store.rs  root.rs  scenario.rs  shortcuts_pane.rs  sidebar_font.rs  window.rs
spikes/phase0-poc/: .gitignore  Cargo.toml  README.md  RESULTS-spike10-20260702.md  RESULTS-spike11-20260702.md  RESULTS-spike11p3-20260702.md  RESULTS-spike3-20260701.md  RESULTS-spike6-20260702.md  RESULTS-spike7-20260702.md  RESULTS-spike8-20260701.md  RESULTS-spike9-20260702.md  RUNBOOK-spikes-6-7-9-10.md  build.rs  gpui-0.2.2-nice.patch  gpui-term-atlas.csv  gpui-term-energy-dot.csv  gpui-term-energy-idle.csv  gpui-term-gpui-native-single-stack.csv  gpui-term-multi-7w3s-gputs.csv  gpui-term-multi-7w3s.csv  gpui-term-resize.csv  gpui-term-scroll+resize+select.csv  gpui-term-scroll.csv  gpui-term-select.csv  gpui-term-sweep.csv  gpui-term-trace-7w3s.csv  gpui-term-trace-drain.csv  gpui-term-trace.csv  rebase-probe-RESULTS-20260702.md  vendor-gpui.sh
spikes/phase0-poc/aa-gamma/: RESULTS-spike1-20260701.md  RUNBOOK.md  bg-luminance-draft.patch  bg-luminance-patch-plan.md
spikes/phase0-poc/aa-gamma/diff-tool/: Cargo.toml
spikes/phase0-poc/aa-gamma/diff-tool/src/: main.rs
spikes/phase0-poc/aa-gamma/gpui-term-main/: Cargo.toml  build.rs  gpui-term-main-headline.csv  zed-main-headline-hook.patch
spikes/phase0-poc/aa-gamma/gpui-term-main/src/: main.rs
spikes/phase0-poc/aa-gamma/scene/: gen_scene.py
spikes/phase0-poc/ab-runs-20260702/: LEDGER.md  extract-toolcalls.sh  judge-prompt-template.md  verifier-checklists.md
spikes/phase0-poc/ab-runs-20260702/briefs/: c0-rust.md  c0-swift.md  t1-rust.md  t1-swift.md  t2-rust.md  t2-swift.md
spikes/phase0-poc/baseline/: ACCESSIBILITY-GRANT.md  NOTES.md  RESULTS-keylat-20260701.md  RESULTS-spike4-20260701.md  RUN.md  capture-present-xctrace.sh  capture-present.sh  draw-durations.py  reduce-signposts.py  replay.sh  sample-mem.sh
spikes/phase0-poc/baseline/keystroke-harness/: .gitignore  Makefile  RUN.md  keyinject.swift  reduce-latency.py  test-reduce.py
spikes/phase0-poc/ime-spike/: IMPLEMENTATION-PLAN.md  MANUAL-PRECHECK.md  RESULTS-spike2-20260702.md  RUN-IME.md  SCOPE.md
spikes/phase0-poc/src/: bridge.rs  embed.rs  gpui_term.rs  harness.rs  input.rs  main.rs  pty_capture.rs
spikes/phase0-poc/swift-bridge/: Package.swift
spikes/phase0-poc/swift-embed/: StubBridge.swift
spikes/phase0-poc/swiftterm-fixture/: Package.swift
spikes/phase0-poc/traces/: claude-session.nicetrace  claude-stream.nicetrace
spikes/spike-altui-vibrancy/: Cargo.toml
spikes/spike-altui-vibrancy/src/: main.rs
spikes/spike-reuse-swiftterm/: Cargo.toml
spikes/spike-reuse-swiftterm/src/: main.rs
spikes/spike-reuse-swiftterm/swift-embed/: Cargo.toml  SwiftTermStub.swift  build.rs
spikes/spike-reuse-swiftterm/swift-embed/src/: main.rs
(+421 files in other folders)
