# nice — the Nice rewrite's GPUI application crate. Binary/process name
# `nice-rs` (deliberately distinct from the Swift `Nice` / `Nice Dev` builds).
#
# Path-dep wiring mirrors the phase-0 spike
# (spikes/phase0-poc/aa-gamma/gpui-term-main/Cargo.toml): gpui plus its macOS
# platform backend, with gpui_platform's `font-kit` feature on. The deps point
# into the vendored, pinned + bg-luminance-patched zed checkout produced by
# `scripts/vendor-zed.sh` (run that before the first build).
[package]
name = "nice"
version = "0.1.3"
edition = "2021"
publish = false

[[bin]]
name = "nice-rs"
path = "src/main.rs"

[dependencies]
gpui = { path = "../../vendor/zed/crates/gpui" }
gpui_platform = { path = "../../vendor/zed/crates/gpui_platform", features = ["font-kit"] }
gpui_macos = { path = "../../vendor/zed/crates/gpui_macos" }
nice-harness = { path = "../nice-harness" }
# Design tokens (palettes, accents) the `tokens` self-test scenario paints and
# asserts against. Pure data, no gpui — the app owns the token -> gpui::Rgba
# adapter (see the swatch grid in `app.rs`), per the crates/README Layering rule.
nice-theme = { path = "../nice-theme" }
# The per-window document model (R8): the R10 sidebar components read the tab
# status model (`TabStatus`, and downstream the tree/selection) — the StatusDot
# renders `Tab::status` / `Tab::waiting_acknowledged` without recomputing them.
nice-model = { path = "../nice-model" }
# The terminal renderer (R4) and its headless core: the `term-render` self-test
# scenario drives a fixture-fed `nice_term_core::Session` through the
# `nice-term-view` renderer and asserts the painted pixels.
nice-term-view = { path = "../nice-term-view" }
nice-term-core = { path = "../nice-term-core" }
anyhow = "1"
# Foreign AppKit access lives behind the one `platform` module (all-Rust rule):
# the demand-present kick uses objc2 msg_send + raw-window-handle to reach the
# window's NSView. objc2/raw-window-handle 0.6 match what gpui_macos links.
objc2 = "0.6"
# R27 (D1): the completion-handler block for the one synchronous `NSURLSession`
# GitHub Releases GET behind `platform::http_get`. `block2` is the objc2 family's
# block companion (MIT OR Apache-2.0) and is ALREADY resolved in the workspace
# `Cargo.lock` (0.6.2, matching objc2 0.6.4) as a transitive dep — adding it as a
# direct dep of `nice` causes NO lock churn and pulls NO new crate / no transport
# or TLS backend. NSURLSession reaches OS TLS (Security.framework) itself.
block2 = "0.6"
# The R9 traffic-light geometry reader (`platform::standard_window_button_frames`)
# reads live `standardWindowButton` frames; `NSRect` and its `CGFloat` fields come
# from objc2-foundation's geometry module. Pinned to the exact version gpui_macos
# already links (`=0.3.2`) with a subset of its features, so the feature set
# unifies and nothing recompiles.
objc2-foundation = { version = "=0.3.2", default-features = false, features = ["NSGeometry", "objc2-core-foundation"] }
raw-window-handle = "0.6"
# The `app-shell` self-test scenario reaps its ptys via `WindowState::teardown`
# then asserts each recorded child pid is GONE (`libc::kill(pid, 0)` -> ESRCH) — an
# OS-level "no orphaned shells" check on top of the SessionManager handle drop.
# Already in the workspace lock (nice-term-core owns the pty reaping); no new fetch.
libc = "0.2"
# AppleFontSmoothing parity: Nice ships fontSmoothing=false, and GPUI-main's
# CoreGraphics glyph-dilation is default-on (gpui_macos text_system.rs) and
# fights the bg-luminance curve. `platform::disable_font_smoothing` sets the
# pref to 0 before the first glyph rasterizes, matching Nice and gpui_macos's
# own reader (same `core_foundation` versions it links — no new fetch).
core-foundation = "0.10"
core-foundation-sys = "0.8"
# SF Symbol icons (`sf_symbols`): the tinted coverage masks are packed into
# `image::Frame`s for `gpui::RenderImage` (gpui's own frame type). Same crate
# version gpui links (already in the workspace lock) so the types unify; no
# extra codecs pulled here — gpui enables its own feature set.
image = { version = "0.25", default-features = false }
# The R14 control socket parses the frozen NDJSON wire protocol
# (`crate::control_socket`): one newline-terminated JSON object per client.
# Promoted from nice-model's dev-only use to a normal dependency here (the app
# is the sole runtime parser of the shell helpers' messages). Already in the
# workspace lock; no new fetch.
serde_json = "1"
# The R18 session store's window-envelope schema (`session_store::Persisted*`)
# derives Serialize/Deserialize for the on-disk `sessions.json`. Already in the
# workspace lock (nice-model pulls the same version); no new fetch.
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
# `gpui/test-support` for THIS crate's own `#[gpui::test]` unit cases ONLY — the
# app-level entity/`&mut App` behavior that `nice-itests` cannot cover because a
# dev/test crate cannot import this binary crate (`SharedSidebarFontSettings`,
# `perform_remove_imported`). This is the MOCKED `TestAppContext` half only
# (TestPlatform + NoopTextSystem, no Metal); it does NOT pull
# `gpui_platform/test-support`, so the process-wide `framebufferOnly=false`
# flip never enters this graph. Being a dev-dependency, the v2 feature resolver
# keeps it OUT of the normal build: `cargo build [--release] -p nice` and
# `cargo tree -p nice --edges normal` stay test-support-free (Validation §4), so
# it can never reach the shipped bundle. Mirrors `nice-itests`'s own dev-dep.
gpui = { path = "../../vendor/zed/crates/gpui", features = ["test-support"] }

[features]
# Screenshot capture (Window::render_to_image), gated so it stays OUT of the
# shipped bundle: enabling it turns on test-support, which flips
# CAMetalLayer.framebufferOnly = false PROCESS-WIDE. The scenario driver itself
# is always compiled (env-gated, harmless); only capture needs this.
#
# Two features are load-bearing and BOTH required:
#   * `nice-harness/capture` -> `gpui/test-support` — compiles the outer
#     `gpui::Window::render_to_image()` method + the image PNG encoder.
#   * `gpui_platform/test-support` -> `gpui_macos/test-support` — compiles the
#     macOS `MacWindow::render_to_image` OVERRIDE (which reads the drawable
#     texture back). Without it the default trait impl bails
#     ("render_to_image not implemented for this platform").
selftest = ["nice-harness/capture", "gpui_platform/test-support"]
