[package]
name = "phase0-poc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
publish = false

# One throwaway binary: a GPUI window hosting the REAL SwiftTerm Metal NSView
# (or the headless stub) under GPUI chrome, plus the measurement harness.
[[bin]]
name = "phase0-poc"
path = "src/main.rs"

# Phase-0 PoC #2 — the SINGLE-STACK GPUI-native terminal (Path B live spike):
# alacritty_terminal VT core rendered through GPUI's public paint API, no
# SwiftTerm, no second Metal layer. Reuses harness.rs. See src/gpui_term.rs.
[[bin]]
name = "gpui-term"
path = "src/gpui_term.rs"

[dependencies]
# Path-B VT core: headless grid/scrollback/parser, ships NO renderer (we draw
# it on GPUI's public primitives). Same version spike-rust-term already proved.
alacritty_terminal = "0.26.0"

# GPUI chrome host. 0.2.2 re-exports raw-window-handle 0.6 — pin to the SAME
# major so the RawWindowHandle enum matches across the gpui<->objc2 seam.
gpui = "0.2.2"
raw-window-handle = "0.6"

# objc2 0.6 / 0.3 — all foreign AppKit manipulation (subview insertion, first
# responder, synthetic NSEvents, event monitor) is done here, exactly like the
# committed spikes (spike-reuse-swiftterm).
objc2 = "0.6"
block2 = "0.6"          # NSEvent local-monitor handler block (PoC item 7)
objc2-foundation = { version = "0.3", features = ["NSGeometry", "NSString", "NSArray"] }
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSRunningApplication", # NSApplicationActivationPolicy (setActivationPolicy)
    "NSWindow",
    "NSView",
    "NSResponder",
    "NSEvent",
    "NSGraphics",        # NSWindowOrderingMode + addSubview:positioned:relativeTo:
    "NSText",
    "NSVisualEffectView",
    "block2",            # addLocalMonitorForEventsMatchingMask:handler:
] }

# Harness: mach clock + (partial) task FFI; task_vm_info_data_t is hand-declared
# in harness.rs because mach2 0.4 does not ship it.
mach2 = "0.4"
libc = "0.2"

# Interactive keystroke-latency mode (spikes 4b/5): pty-echo wakeups cross from
# the reader thread to the GPUI main thread over an unbounded channel. Same
# futures 0.3 gpui already links (no new transitive deps).
futures = "0.3"

# Vendored gpui 0.2.2 with the Nice Phase-0 patch applied (spike 3 GPUI-side
# transactional-present toggle via NICE_POC_GPUI_TXN=1 + the "Draw" os_signpost
# on subsystem dev.nickanderssohn.gpui-term). vendor/ is gitignored; recreate it
# with ./vendor-gpui.sh (copies the pristine crates.io extraction and applies
# gpui-0.2.2-nice.patch). See README §"Vendored gpui (spike 3 + signpost)".
[patch.crates-io]
gpui = { path = "vendor/gpui-0.2.2" }
